# humble-bundle-inventory

./: .env.example  .gitignore  API_DOCUMENTATION.md  HAR_METADATA_GUIDE.md  LICENSE  MANIFEST.in  README.md  TECHNICAL_DOCUMENTATION.md  main.py  pyproject.toml  requirements.txt
docs/: CYCLOMATIC_COMPLEXITY_ANALYSIS.md  INTEGRATION_SUMMARY.md  README.md  README_SELENIUM.md  README_TESTING.md  REGEX_SEARCH_ARCHITECTURE.md  TECHNICAL_DOCUMENTATION.md  search_examples.md  search_quick_reference.md
docs/adr/: 001-abstraction-framework-implementation.md  002-improvement-roadmap-and-technical-debt-prioritization.md
examples/: basic_usage.py
examples/search_examples/: advanced_search.py
src/humble_bundle_inventory/: __init__.py  auth_selenium.py  categorization_engine.py  config.py  database.py  duckdb_search_provider.py  enhanced_sync.py  main.py  schema.sql  search_provider.py  sync_framework.py  web_scraping_framework.py  working_metadata_sync.py
tests/: README.md  cyclomatic_complexity.py  run_tests.py  test_basic.py  test_cyclomatic_complexity.py  test_integration.py  test_mfa_flow.py  test_search_integration.py  test_search_provider.py  test_selenium_auth.py  test_sync_selenium.py
